# patchwork-rs

./: Cargo.toml  README.md  book.toml
examples/: summarize_docs.rs
md/: SUMMARY.md  introduction.md  rfc-think-builder.md
src/: determinishtic.rs  error.rs  lib.rs  patchwork.rs  think.rs
