[package]
name = "patchwork"
version = "0.1.0"
edition = "2024"
description = "Blend deterministic Rust code with LLM-powered reasoning"
license = "MIT OR Apache-2.0"

[dependencies]
# ACP/MCP integration
sacp = { path = "../symposium-acp/src/sacp" }

# Serialization and schema
schemars = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["sync", "rt"] }
futures = "0.3"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
sacp-conductor = { path = "../symposium-acp/src/sacp-conductor" }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sacp-tokio = { path = "../symposium-acp/src/sacp-tokio" }
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "summarize_docs"
path = "examples/summarize_docs.rs"
